# diu-thi-hieu

./: .gitignore  example.ipynb  interactive.ipynb  main.py  pyproject.toml  test_extract.ipynb
.devcontainer/: .zshrc  Dockerfile  devcontainer.json  post-create.sh
extract/: __init__.py  itviec.py
