[project]
name = "diu-thi-hieu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "idna>=3.10",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "nbconvert>=7.16.6",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "pylance>=0.24.1",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
    "wrapper-tls-requests>=1.1.2",
]
